--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.14",
     "vue-infinite-slide-bar": "^1.1.1",
     "vue-js-modal": "^2.0.1",
+    "vue-product-zoomer": "^3.0.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.7",
